<resources>
    <string name="app_name">KnowledG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>
    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="webview_loading">Load Content... </string>
    <string name="text_forgot_password">忘记密码？</string>
    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_repeat_password">确认密码</string>
    <string name="text_sign_in">登入</string>
    <string name="text_new_user">新用户？</string>
    <string name="text_have_account">已有账户？</string>
    <string name="text_sign_up">注册</string>
    <string name="text_sign_out">登出</string>
    <string name="text_about">关于KnowledG…</string>
    <string name="text_notification">通知</string>
    <string name="text_library">知识库</string>
    <string name="text_not_signed_in">未登录</string>
    <string name="text_user_bio">KnowledG 用户</string>
    <string name="text_sign_in_up">登录/注册</string>
    <string name="text_history">浏览历史</string>
    <string name="text_remind_sign_in">立即登录体验更多功能</string>
    <string name="text_collection">我的收藏</string>
    <string name="text_chat_bot">问答机器人</string>
    <string name="chat_bot_name">Chat Bot</string>
    <string name="chat_bot_state">alive</string>
    <string name="error_time_out">与服务器的连接超时</string>
    <string name="error_connection_fail">无法建立网络连接</string>
    <string name="error_json_serialization_fail">JSON序列化出错</string>
    <string name="error_json_deserialization_fail">JSON反序列化出错</string>
    <string name="error_empty_body">服务器返回空</string>
    <string name="warn_pwd_not_the_same">密码不一致</string>
    <string name="error_resource_server_error">资源服务器出错</string>
    <string name="search_not_found">未找到结果</string>
    <string name="error_cache_load_fail">缓存加载失败</string>
    <string name="error_cache_save_fail">缓存存储失败</string>
    <string name="error_cache_init_fail">缓存初始化失败</string>
    <string name="category_null">*</string>
    <string name="category_all">所有</string>
    <string name="category_chinese">语文</string>
    <string name="category_math">数学</string>
    <string name="category_english">英语</string>
    <string name="category_physics">物理</string>
    <string name="category_chemistry">化学</string>
    <string name="category_biology">生物</string>
    <string name="category_geo">地理</string>
    <string name="category_history">历史</string>
    <string name="category_politics">政治</string>
    <string name="history_content">历史记录</string>
    <string name="no_more">没有更多了哦～</string>
    <string name="able_subjects">可见的科目</string>
    <string name="unable_subjects">不可见的科目</string>
    <string name="clear_history_content">清除历史记录...</string>
    <string name="setting">首页学科设置</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="geo">地理</string>
    <string name="biology">生物</string>
    <string name="politics">政治</string>
    <string name="history">历史</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>
    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="long_lorem_ipsum_2">
        Vivamus porttitor, erat at aliquam mollis, risus ligula suscipit metus, id semper nisi dui lacinia leo. Praesent at feugiat sem. Vivamus consectetur arcu sit amet metus efficitur dapibus. Sed metus ligula, efficitur quis finibus nec, pellentesque nec nulla. Nunc nec magna iaculis turpis vehicula condimentum id lobortis lectus.
        \n\nQuisque augue diam, convallis nec mollis in, placerat nec elit. Aliquam non erat tristique, consequat tortor ultricies, sodales erat. Aliquam quis enim eu nulla facilisis sollicitudin eu mollis mauris. Donec ornare urna non libero volutpat tempus. Mauris elementum egestas ex, a laoreet urna. Ut a magna mattis, sodales massa a, blandit justo.
    </string>
    <string name="text_discover">知识点发现</string>
</resources>