<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_100_"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:titleTextColor="@android:color/white" />

            <TextView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_content"
                android:textColor="@color/colorDetail"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginStart="@dimen/spacing_medium"
                android:textAlignment="center"
                android:visibility="gone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/clear_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_history_content"
                android:textColor="@color/colorDetail"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_marginBottom="@dimen/spacing_xsmall"
                android:layout_marginStart="@dimen/spacing_medium"
                android:textAlignment="center"
                android:visibility="gone"
                android:textSize="18sp" />

            <include layout="@layout/check_box" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/spacing_middle"
                android:visibility="gone" />

            <include layout="@layout/main_content" />

            <LinearLayout
                android:id="@+id/ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--navigation drawer menu-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/grey_95"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/include_drawer_header_main_menu"
        app:itemIconTint="@color/grey_40"
        app:itemTextColor="@color/grey_10"
        app:menu="@menu/menu_activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>